[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://NPCHouse.tscn" type="PackedScene" id=2]
[ext_resource path="res://TalkBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tree.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/background road actual.png" type="Texture" id=5]
[ext_resource path="res://art/hamlet, desert background strip.png" type="Texture" id=6]
[ext_resource path="res://Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://TravellersHouse.tscn" type="PackedScene" id=8]
[ext_resource path="res://GuardHouse.tscn" type="PackedScene" id=9]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
InitialX = -50
InitialY = 375
NPCHouse = ExtResource( 2 )
TalkBox = ExtResource( 3 )
bgTree = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="0"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" index="0"]

motion_scale = Vector2( 0.5, 0.5 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 0, 0 )
_sections_unfolded = [ "Motion" ]

[node name="StartPosition" type="Position2D" parent="." index="1"]

position = Vector2( 150, 420 )
_sections_unfolded = [ "Transform" ]

[node name="Road" type="TextureRect" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -540.0
margin_top = 458.0
margin_right = 1253.0
margin_bottom = 658.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
expand = true
stretch_mode = 2
_sections_unfolded = [ "Material", "Rect", "Visibility" ]

[node name="Background" type="CanvasLayer" parent="." index="3"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="SkyRoadBG" type="TextureRect" parent="Background" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -13.0
margin_right = 14.0
margin_bottom = 9.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 2
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="Player" parent="." index="4" instance=ExtResource( 7 )]

[node name="TravellersHouse" parent="." index="5" instance=ExtResource( 8 )]

[node name="HUD" type="CanvasLayer" parent="." index="6"]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="TalkBox" parent="HUD" index="0" instance=ExtResource( 3 )]

visible = false
position = Vector2( 15.9045, 184.038 )

[node name="GuardHouse" parent="." index="7" instance=ExtResource( 9 )]

[node name="InteractExitTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="body_entered" from="Player" to="." method="_on_Player_body_entered"]

[connection signal="body_exited" from="Player" to="." method="_on_Player_body_exited"]

[connection signal="timeout" from="InteractExitTimer" to="." method="_on_InteractExitTimer_timeout"]


